--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!-- header  -->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark">
+        <nav class="navbar navbar-dark navbar-expand-lg">
             <div class="container">
                 <a class="navbar-brand" href="#">Assignments</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -29,7 +29,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Chapter 1 - 7</a>
+                            <a class="nav-link active" aria-current="page" href="#">Chapter 1-7</a>
                         </li>
                     </ul>
                     <form class="d-flex" role="search">
@@ -41,85 +41,82 @@
         </nav>
     </header>
 
-    <!-- main  -->
-
+    <!-- main -->
     <main>
-
         <div class="container">
-
-            <div class="row">
-                <div class="col mt-5">
-                    <h4 class="text-center">Chapter # 1 - 7 | Introduction to JavaScript | Data Types | Alert |
-                        Arithmetic Operators</h4>
+            <div class="row mt-5">
+                <div class="col text-center">
+                    <h4>Chapter # 1-7 | Introduction to JavaScript | Data Types | Alert | Arithmatic Operators</h4>
                     <hr />
                 </div>
             </div>
 
+            <!-- function buttons -->
             <div class="row">
                 <div class="col text-center py-4 px-5 border border-secondary rounded">
-                    <button class="btn btn-sm mb-2 btn-danger" id="alertName">Alert Name</button>
-                    <button class="btn btn-sm mb-2 btn-danger" id="alertNumber">Alert Number</button>
-                    <button class="btn btn-sm mb-2 btn-danger" id="variableNames">Show Variable Names</button>
-                    <button class="btn btn-sm mb-2 btn-danger" id="camelCase">Show camelCase Examples</button>
-                    <button class="btn btn-sm mb-2 btn-danger" id="sumNumbers">Sum 2 Numbers</button>
-                    <button class="btn btn-sm mb-2 btn-danger" id="subtractNumbers">Subtract 2 Numbers</button>
-                    <button class="btn btn-sm mb-2 btn-danger" id="multiplyNumbers">Multiply 2 Numbers</button>
-                    <button class="btn btn-sm mb-2 btn-danger" id="divideNumbers">Divide 2 Numbers</button>
-                    <button class="btn btn-sm mb-2 btn-danger" id="calculateNumbers">Calculate Some Numbers</button>
+                    <button class="btn btn-sm btn-danger mb-2" id="alertName">Alert Name</button>
+                    <button class="btn btn-sm btn-danger mb-2" id="alertNumber">Alert Number</button>
+                    <button class="btn btn-sm btn-danger mb-2" id="varialbeNames">Show Variable Names</button>
+                    <button class="btn btn-sm btn-danger mb-2" id="camelCase">Show Camel Case Examples</button>
+                    <button class="btn btn-sm btn-danger mb-2" id="sumNumbers">Sum 2 Numbers</button>
+                    <button class="btn btn-sm btn-danger mb-2" id="subtractNumbers">Subtract 2 Numbers</button>
+                    <button class="btn btn-sm btn-danger mb-2" id="multiplyNumbers">Multiply 2 Numbers</button>
+                    <button class="btn btn-sm btn-danger mb-2" id="divideNumbers">Divide 2 Numbers</button>
+                    <button class="btn btn-sm btn-danger mb-2" id="calculateNumbers">Calculate Some Numbers</button>
                 </div>
             </div>
 
+            <!-- Input-->
             <div class="row mt-5">
                 <div class="col">
                     <h3 class="text-center">Original Statement</h3>
                 </div>
             </div>
             <div class="row">
-                <div class="col text-center border rounded border-secondary py-4" id="input-box"></div>
+                <div class="col border border-secondary rounded text-center py-4" id="input-box">
+                </div>
             </div>
             <div class="row">
                 <div class="col mt-3 text-center">
-                    <button class="btn border-secondary btn-sm border" id="clearInputBtn">Clear Statement</button>
+                    <button class="btn btn-sm border border-secondary" id="clearInputBtn">Clear Statement</button>
                 </div>
             </div>
 
-
+            <!-- Output -->
             <div class="row mt-5">
                 <div class="col">
                     <h3 class="text-center">Output / Result</h3>
                 </div>
             </div>
             <div class="row">
-                <div class="col text-center border rounded border-secondary py-4" id="output-box"></div>
-            </div>
-            <div class="row">
-                <div class="col mt-3 text-center">
-                    <button class="btn border-secondary btn-sm border" id="clearOutputBtn">Clear Output</button>
+                <div class="col text-center border border-secondary rounded py-4" id="output-box">
                 </div>
             </div>
-
+            <div class="row">
+                <div class="col text-center mt-3">
+                    <button class="btn btn-sm border border-secondary " id="clearOutputBtn">Clear Output</button>
+                </div>
+            </div>
         </div>
-
     </main>
 
-    <!-- footer  -->
-
-    <footer class="py-3 mt-5">
+    <!-- footer -->
+    <footer class="mt-5 py-2">
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <p class="text-white text-center mb-0">&copy; 2024. Assignments By <a href="https://umairahmad.net"
-                            class="text-white fw-bold text-decoration-none">www.umairahmad.net</a></p>
+                    <p class="text-center text-white mb-0">&copy; 2024. Assignments By <a href="https://umairahmad net"
+                            class="text-white fw-bold text-decoration-none"></a><b>www.umairahmed.net</b></p>
                 </div>
             </div>
         </div>
     </footer>
-    <!-- Bootstrap js  -->
+
+    <!-- Bootstrap Js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Custom Js  -->
+    <!-- Custom JS -->
     <script src="./javascript/script.js"></script>
-
 </body>
 
 </html>
